--- a/index.html
+++ b/index.html
@@ -21,32 +21,18 @@
                 <h3>
                     Movie Ranking Project
                 </h3>
-                <img src="./public/Screenshot 2024-06-12 232416.png" height="200" alt="Piture of best movie ranking project">
             </a>
+            <img src="./public/Screenshot 2024-06-12 232416.png" height="200" alt="Piture of best movie ranking project">
         </li>
         <li>
-            <a href="/3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/index.html">
+           
                 <h3>
                     Bithday Invitation
                 </h3>
-            <img src="./public/Screenshot 2024-06-12 234929.png" height="200">
             </a>
+            <img src="./public/Screenshot 2024-06-12 234929.png" height="200" alt="Brthday Cake">
         </li>
     </ol>
 </h2>
 </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
