--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Osvaldo's Portfolio</title>
 </head>
 <body>
-    <h1>
+<h1>
     Osvaldo's Portfolio
 </h1>
 <h2>
@@ -17,7 +16,7 @@
 <h2>
     <ol>
         <li>
-            <a href="/2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html">
+            <a href="./public/index.html">
                 <h3>
                     Movie Ranking Project
                 </h3>
@@ -25,14 +24,28 @@
             <img src="./public/Screenshot 2024-06-12 232416.png" height="200" alt="Piture of best movie ranking project">
         </li>
         <li>
-           
+            <a href="./assets/images/index.html">
                 <h3>
                     Bithday Invitation
                 </h3>
             </a>
-            <img src="./public/Screenshot 2024-06-12 234929.png" height="200" alt="Brthday Cake">
+            <img src="./public/Screenshot 2024-06-12 234929.png" height="200">
         </li>
     </ol>
 </h2>
 </body>
 </html>
+
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
