--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h2>
     <ol>
         <li>
-            <a href="./public/index.html">
+            <a href="./public/movie-index.html">
                 <h3>
                     Movie Ranking Project
                 </h3>
