--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="./public/Screenshot 2024-06-12 232416.png" height="200" alt="Piture of best movie ranking project">
         </li>
         <li>
-            <a href="./assets/images/index.html">
+            <a href="./assets/images/brthdat-index.html">
                 <h3>
                     Bithday Invitation
                 </h3>
